# Truelink-backend

./: .gitignore  Cargo.toml  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 0002_create_connections_table.sql
backend/src/: main.rs
backend/src/auth/: middleware.rs  mod.rs  service.rs
backend/src/models/: connection.rs  mod.rs  profile.rs  user.rs
backend/src/routes/: auth.rs  connections.rs  mod.rs  profile.rs
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: AuthForm.tsx  ConnectionRequests.tsx  ConnectionsList.tsx  Dashboard.tsx  Login.tsx  Navbar.tsx  ProfileEditor.tsx  UserSearch.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
migrations/: 001_create_users_table.sql
src/: main.rs
src/models/: mod.rs  user.rs
src/routes/: auth.rs  mod.rs
